add cache and validate token for accounts
add cache and validate token for accounts